# finviz-mcp-server

./: .env.example  .gitignore  CLAUDE.md  DESIGN_JP.md  LICENSE  MANIFEST.in  PACKAGE_DESCRIPTION.md  README.md  README_ja.md  REFACTORING_TODO.md  SETUP.md  TOOLS_REFERENCE.md  pyproject.toml  requirements.txt  run_release_tests.py  run_server.py  run_tests.py
.github/workflows/: deploy-pages.yml
articles/: README.md  index.html
articles/html/: how-i-automated-stock-screening-with-ai-and-finviz.html
articles/markdown/: AIを活用したトレード・投資の新しいアプローチ 〜Finviz×AIで銘柄スクリーニングを自動化してみた〜.md  How_I_Automated_Stock_Screening_with_AI_and_Finviz_A_Game_Changer_for_Traders.md  finviz-mcp-server-usage-guide-note.md  finviz-mcp-server-usage-guide.md
articles/media/: GOOGL_stock_investment_analysis_2x.mov  earnings_screener_demo_2x.mov  earnings_screener_demo_2x_60fps.mov
docs/: FIELD_DISCOVERY_ENHANCEMENT.md  IMPLEMENTATION_COMPLETE.md  development_guide.md  finviz_mcp_server_design.md  finviz_screen_page.html  finviz_screening_parameters.md  setup.md  tools_reference.md
scripts/: QUICK_START.md  README.md  finviz_elite_analyzer.py  finviz_filters_analysis_finviz_screen_page.json  finviz_filters_analysis_finviz_screen_page.md  finviz_html_analyzer.py  finviz_range_analysis_finviz_screen_page.json  finviz_range_analysis_finviz_screen_page.md  finviz_range_analyzer.py  quick_analyze.py  quick_html_analyze.py  quick_range_analyze.py  requirements.txt
src/: __main__.py  constants.py  models.py  server.py
src/field_discovery/: __init__.py  metadata.py  tools.py
src/finviz_client/: __init__.py  base.py  edgar_client.py  news.py  screener.py  sec_filings.py  sector_analysis.py
src/mcp/: __init__.py
src/utils/: exceptions.py  formatters.py  validators.py
tests/: README.md  debug_screener.py  run_comprehensive_test.py  test_all_features.py  test_analysis.py  test_basic.py  test_comprehensive_e2e_real_calls.py  test_comprehensive_finviz_parameters.py  test_comprehensive_parameters.py  test_e2e_screeners.py  test_e2e_with_real_objects.py  test_edgar_api.py  test_error_handling.py  test_financial_parameters.py  test_live_features.py  test_market_overview.py  test_mcp_integration.py  test_mcp_system_validation.py  test_moving_average_position.py  test_parameter_combinations.py  test_stockdata_integration.py  test_uptrend_screener.py  test_volume_surge_screener.py  volume_surge_analysis_report.html
tests/field_discovery/: __init__.py  test_field_discovery_tools.py  test_field_metadata.py
